--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand" href="index.html">Piew's Admin</a>
+                <a class="navbar-brand" href="index.html"><i class="fab fa-angellist mr-1"></i>Piew's Admin</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ml-auto">
-                        <a class="nav-item nav-link active" href="index.html"> <i class="fas fa-home"></i> Home <span
+                        <a class="nav-item nav-link active" href="index.html"> <i class="fa fa-bar-chart" aria-hidden="true"></i> Stats <span
                                 class="sr-only">(current)</span></a>
                         <a class="nav-item nav-link" href="html/sales.html"><i class="fas fa-dollar-sign"></i> Sales</a>
                         <a class="nav-item nav-link" href="https://first-nodejs-app-0.herokuapp.com/" target="_blank"><i class="fas fa-building"></i> About</a>
